package edu.unam.integrador.model;

public interface EstrategiaPago {
    void pagar(double monto);
}
